# cube

./: Cargo.toml  a
assets/shader/: shader.frag  shader.vert
assets/shaders/: shader.frag  shader.fs  shader.vert  shader.vs
src/: buffer.rs  color_buffer.rs  error.rs  main.rs  program.rs  shader.rs  util.rs  viewport.rs
src/components/: layout.rs  layout2.rs  mod.rs  piece.rs  stickers.rs  transform.rs
src/ogl/: buffer.rs  camera.rs  color_buffer.rs  mod.rs  normal.rs  program.rs  render.rs  renderer.rs  resources.rs  texture.rs  uv.rs  vertex.rs
src/world_object/: cube.rs  mod.rs  viewport_resize.rs
