[package]
name = "cube"
version = "0.1.0"
authors = ["morganamilo <morganamilo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.32.2"
gl = "0.13.0"
nalgebra = "0.18.0"
wavefront_obj = "6.0.0"
obj = "0.9.0"
tobj = "0.1.8"
